--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -202,7 +202,11 @@ header {
 }
 
 .quiz {
-  background-color: rgba(255, 255, 255, 0.1);
+  
+  &.main {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+
   .quiz-button {
     height: 100px;
     width: 100px;
