--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -233,6 +233,17 @@ header {
   }
 }
 
+.action {
+  .button {
+    display: block;
+    color: white;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
+
 .footer {
   background-color: rgba(255, 255, 255, 0.1);
   text-align: center;
