--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -233,6 +233,66 @@ header {
   }
 }
 
+.psico {
+
+  .case {
+    height: 150px;
+    width: 150px;
+    text-align: left;
+    margin-left: 10px;
+    margin-right: 10px;
+
+    img {
+      position: absolute;
+      height: 150px;
+      width: 150px;
+      // border-radius: 5px;
+      opacity: 0.8;
+    }
+
+    .case-content {
+      position: absolute;
+      text-align: center;
+      height: 150px;
+      width: 150px;
+      display: flex;
+      align-items: baseline;
+      padding: 0px;
+
+      .case-text {
+        width: 100%;
+        color: black;
+        background-color: rgba(255, 255, 255, 0.5);
+        font-size: 10px;
+        font-weight: 600;
+        display: inline-block;
+        align-self: flex-end;
+        p {
+          margin: 0px;
+        }
+      }
+    }
+  }
+  
+  h2 {
+    width: 70%;
+    @include media-breakpoint-down(sm) {
+      width: 90%;
+    }
+  }
+
+  h5 {
+    padding-top: 0;
+  }
+
+  .note {
+    width: 50%;
+    @include media-breakpoint-down(sm) {
+      width: 90%;
+    }
+  }
+}
+
 .action {
   .button {
     display: block;
