added margin on sm

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -241,6 +241,9 @@ header {
     text-align: left;
     margin-left: 10px;
     margin-right: 10px;
+    @include media-breakpoint-down(sm) {
+      margin-bottom: 20px;
+    }
 
     img {
       position: absolute;
@@ -273,7 +276,7 @@ header {
       }
     }
   }
-  
+
   h2 {
     width: 70%;
     @include media-breakpoint-down(sm) {
