--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -242,6 +242,10 @@ header {
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 20px;
+    @include media-breakpoint-down(sm) {
+      height: 130px;
+      width: 130px;
+    }
 
     img {
       position: absolute;
@@ -249,6 +253,10 @@ header {
       width: 150px;
       // border-radius: 5px;
       opacity: 0.8;
+      @include media-breakpoint-down(sm) {
+        height: 130px;
+        width: 130px;
+      }
     }
 
     .case-content {
@@ -259,6 +267,10 @@ header {
       display: flex;
       align-items: baseline;
       padding: 0px;
+      @include media-breakpoint-down(sm) {
+        height: 130px;
+        width: 130px;
+      }
 
       .case-text {
         width: 100%;
