--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -208,19 +208,16 @@ header {
   }
 
   .resource-button {
-    height: 120px;
-    width: 300px;
-    text-align: left;
-    margin-bottom: 20px;
+    width: auto;
+    height: 100px;
+    margin-bottom: 40px;
     margin-left: 20px;
     margin-right: 20px;
+    display: block;
 
     img {
-      position: absolute;
-      height: 120px;
-      width: 300px;
-      border-radius: 5px;
-      // opacity: 0.8;
+      width: auto;
+      height: 100px;
     }
   }
 
