--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -357,3 +357,23 @@ header {
     width: 90%;
   }
 }
+
+.beca {
+  background-color: rgba(201, 48, 115, 0.25);
+
+  .beca-img {
+    position: relative;
+    // top: -60px;
+    // margin-bottom: -90px;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    width: 50%;
+
+    @include media-breakpoint-down(sm) {
+      margin-top: 4%;
+      margin-bottom: 5%;
+      // margin-bottom: -2%;
+      width: 80%;
+    }
+  }
+}
