--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -316,6 +316,84 @@ header {
           margin: 0px;
         }
       }
+
+      .case-head {
+        width: 100%;
+        color: rgb(241, 64, 10);
+        background-color: rgba(241, 211, 36, 0.5);
+        font-size: 18px;
+        font-weight: 600;
+        display: inline-block;
+        align-self: flex-end;
+        p {
+          margin: 0px;
+        }
+      }
+    }
+  }
+
+  .bigButton {
+    height: 150px;
+    width:300px;
+    text-align: left;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    @include media-breakpoint-down(sm) {
+      height: 130px;
+      width: 260px;
+    }
+
+    img {
+      position: absolute;
+      height: 150px;
+      width: 300px;
+      // border-radius: 5px;
+      opacity: 1;
+      @include media-breakpoint-down(sm) {
+        height: 130px;
+        width: 260px;
+      }
+    }
+
+    .bigButton-content {
+      position: absolute;
+      text-align: center;
+      height: 150px;
+      width: 300px;
+      display: flex;
+      align-items: baseline;
+      padding: 0px;
+      @include media-breakpoint-down(sm) {
+        height: 130px;
+        width: 260px;
+      }
+
+      .bigButton-text {
+        width: 100%;
+        color: black;
+        background-color: rgba(255, 255, 255, 0.5);
+        font-size: 10px;
+        font-weight: 600;
+        display: inline-block;
+        align-self: flex-end;
+        p {
+          margin: 0px;
+        }
+      }
+
+      .bigButton-head {
+        width: 100%;
+        color: rgb(241, 64, 10);
+        background-color: rgba(241, 211, 36, 0.5);
+        font-size: 18px;
+        font-weight: 600;
+        display: inline-block;
+        align-self: flex-end;
+        p {
+          margin: 0px;
+        }
+      }
     }
   }
 
